VDAC_Saw_Export.cydsn/BLE_notify.cydsn/BUILD.log
--------------- Build Started: 07/27/2022 20:16:10 Project: BLE_notify, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
The compile step is up to date, no work needs to be done.
The link step is up to date, no work needs to be done.
arm-none-eabi-gcc.exe -mcpu=cortex-m4 -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -mthumb -I. -IGenerated_Source\PSoC6 -IGenerated_Source\PSoC6\pdl\cmsis/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/include/ip/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/device/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/efuse/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/flash/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/gpio/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ipc/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/lvd/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/profile/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/prot/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/scb/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/sysanalog/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/sysclk/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/sysint/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/syslib/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/syspm/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/systick/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/trigmux/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/wdt/ -IGenerated_Source\PSoC6\pdl\middleware/ -IGenerated_Source\PSoC6\pdl\utilities/ -Wa,-alh=.\CortexM4\ARM_GCC_541\Debug/main_cm4.lst -g -D DEBUG -D CY_CORE_ID=0 -D CY_PSOC_CREATOR_USED=1 -D CYBLE_416045_02 -Wall -ffunction-sections -ffat-lto-objects -Og -c main_cm4.c -o .\CortexM4\ARM_GCC_541\Debug\main_cm4.o
main_cm4.c: In function 'genericEventHandler':
main_cm4.c:35:43: warning: unused variable 'param' [-Wunused-variable]
             cy_stc_ble_gap_bd_addr_info_t param;
                                           ^
main_cm4.c:44:53: warning: unused variable 'writeReqParameter' [-Wunused-variable]
             cy_stc_ble_gatts_write_cmd_req_param_t *writeReqParameter = (cy_stc_ble_gatts_write_cmd_req_param_t *) eventParameter;
                                                     ^
main_cm4.c: In function 'main':
main_cm4.c:104:79: error: incompatible type for argument 2 of 'Cy_BLE_GATTS_SendNotification'
         cy_en_ble_api_result_t e = Cy_BLE_GATTS_SendNotification(&connHandle, serviceData);
                                                                               ^
In file included from Generated_Source\PSoC6\pdl\middleware/ble/cy_ble.h:25:0,
                 from Generated_Source\PSoC6/project.h:41,
                 from main_cm4.c:12:
Generated_Source\PSoC6\pdl\middleware/ble/cy_ble_gatt.h:219:24: note: expected 'cy_stc_ble_gatt_handle_value_pair_t * {aka struct <anonymous> *}' but argument is of type 'cy_stc_ble_gatt_value_t {aka struct <anonymous>}'
 cy_en_ble_api_result_t Cy_BLE_GATTS_SendNotification(cy_stc_ble_conn_handle_t *connHandle,
                        ^
main_cm4.c:82:45: warning: variable 'serviceHandle' set but not used [-Wunused-but-set-variable]
         cy_stc_ble_gatt_handle_value_pair_t serviceHandle;
                                             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 07/27/2022 20:16:12 ---------------
